[package]
authors = ["The rust-fuzz Project Developers"]
description = "A wrapper around LLVM's libFuzzer runtime."
edition = "2018"
license = "MIT/Apache-2.0/NCSA"
name = "libfuzzer-sys"
readme = "./README.md"
repository = "https://github.com/rust-fuzz/libfuzzer"
version = "0.4.3"

[dependencies]
arbitrary = "1"
once_cell = "1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
arbitrary-derive = ["arbitrary/derive"]

[workspace]
members = [
  "./example/fuzz",
  "./example_arbitrary/fuzz",
  "./example_mutator/fuzz",
]

[dev-dependencies]
flate2 = "1.0.24"
rand = "0.8.5"
